Fixed alignment of items

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,7 +20,25 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  padding:16px;
 }
+
+.header {
+  font-weight:bold;
+  margin-bottom:8px;
+}
+
+.flex {
+  display:flex;
+  justify-content:space-between;
+  align-items:flex-start;
+  column-gap:16px;
+}
+
+.text {
+  margin-bottom:16px;
+}
+
 
 .icon {
   color: royalblue;
@@ -33,6 +51,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink:0;
+
 }
 
 .close-button {
@@ -48,12 +68,14 @@ body {
   justify-content: center;
   border: 1px solid #eee;
   padding: 0;
+  flex-shrink:0;
 }
 
 button {
   cursor: pointer;
   padding: 8px 16px;
   border-radius: 8px;
+  
 }
 
 button.continue {
@@ -66,4 +88,5 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+  
 }
